# password-manager

./: .gitignore  CMakeLists.txt
include/: my_comparator.h  my_linked_list.h  my_string.h  my_txt.h
src/: main.c  main.cpp  my_comparator.c  my_linked_list.c  my_string.c  my_txt.c
tests/: my_linked_list_tests.c  my_string_tests.c  test_runner.c
